[project]
name = "qsarify"
version = "0.2.0"
authors = [
    { name = "Stephen Szwiec", email = "Stephen.Szwiec@ndsu.edu" },
]
description = "A Python package for generating and evaluating quantitative structure-activity relationship (QSAR) models."
license = "GPL-3.0-or-later"
license-files =   ["LICENSE"]
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Operating System :: OS Independent",
	"Development Status :: 2 - Pre-Alpha",
	"Intended Audience :: Science/Research",
	"Topic :: Scientific/Engineering :: Chemistry",
	"Topic :: Scientific/Engineering :: Artificial Intelligence",
	"Topic :: Scientific/Engineering :: Bio-Informatics",
	"Topic :: Scientific/Engineering :: Information Analysis",
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "blessed>=1.21.0",
    "color-science>=0.4.5",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "black",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/qsarify",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_calls = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = [
    "test_*.py",
    "*_test.py",
]

[tool.uv.workspace]
members = ["qsarify"]

[project.scripts]
qsarify = "qsarify:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/stephenszwiec/qsarify"
